Fix dark mode for mui-v5

--- a/src/Components/Design/Icon/styles.module.scss
+++ b/src/Components/Design/Icon/styles.module.scss
@@ -2,3 +2,8 @@
   text-align: center;
   margin: auto;
 }
+@media (prefers-color-scheme: dark) {
+  .icon {
+    color: white;
+  }
+}
